<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="6dip"
    android:paddingRight="6dip"
    android:paddingBottom="3dip">


    <RadioGroup
      android:id="@+id/rg_view"
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:orientation="vertical" 
      >
      <RadioButton android:id="@+id/view_top"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:text="@string/view_top"
        />
      <RadioButton android:id="@+id/view_east"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:text="@string/view_east"
        />
      <RadioButton android:id="@+id/view_north"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:text="@string/view_north"
        />
      <RadioButton android:id="@+id/view_west"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:text="@string/view_west"
        />
      <RadioButton android:id="@+id/view_south"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:text="@string/view_south"
        />
    </RadioGroup>


    <LinearLayout
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="20dp"
      >
      <!-- CheckBox android:id="@+id/view_point"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:text="@string/view_point"
      / -->
      <CheckBox android:id="@+id/view_zoom"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="50"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:text="@string/view_zoom"
      />
      <Button android:id="@+id/button_ok"
          style="@style/button_default"
          android:layout_width="0dp" 
          android:layout_height="wrap_content"
          android:layout_weight="50"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:text="@string/btn_ok"
      />
    </LinearLayout>

</LinearLayout>
