<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="6dip"
    android:paddingRight="6dip"
    android:paddingBottom="3dip">

    <SeekBar android:id="@+id/alpha"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:padding="10dp"
      android:max="255"
      android:background="#666666"
    />

    <CheckBox android:id="@+id/projection"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:text="@string/surface_projection"
      />

    <CheckBox android:id="@+id/texture"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:text="@string/surface_texture"
      />

    <!-- DEM file -->
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:orientation="horizontal"
      >
      <EditText android:id="@+id/dem_file"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:gravity="left"
        />
      <Button android:id="@+id/dem_load"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:gravity="right"
        android:text="@string/dem_load"
        />
    </LinearLayout>
   					  
    <LinearLayout
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="10dp"
      >
      <Button android:id="@+id/button_ok"
        style="@style/button_default"
        android:layout_width="0dp" 
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_ok"
        />
      <Button android:id="@+id/button_cancel"
        style="@style/button_default"
        android:layout_width="0dp" 
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_cancel"
        />
     </LinearLayout>

</LinearLayout>
