<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="6dip"
    android:paddingRight="6dip"
    android:paddingBottom="3dip">
   					  
    <TextView 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:gravity="left"
      android:text="@string/info_axes" 
      />

    <TableLayout
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content"
      >
      <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView 
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
          android:gravity="left"
          android:text="@string/info_grid"
          />
        <TextView android:id="@+id/info_grid"
          android:layout_width="100dip" 
          android:layout_height="wrap_content" 
          android:gravity="right"
          android:text="1"
          />
      </TableRow>

      <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView 
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
          android:gravity="left"
          android:text="@string/info_view"
          />
        <TextView android:id="@+id/info_azimuth"
          android:layout_width="100dip" 
          android:layout_height="wrap_content" 
          android:gravity="right"
          android:text="0.0"
          />
      </TableRow>

      <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView 
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
          android:gravity="left"
          android:text="@string/info_surveys"
          />
        <TextView android:id="@+id/info_surveys"
          android:layout_width="100dip" 
          android:layout_height="wrap_content" 
          android:gravity="right"
          android:text="0.0"
          />
      </TableRow>

      <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView 
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
          android:gravity="left"
          android:text="@string/info_shots"
          />
        <TextView android:id="@+id/info_shots"
          android:layout_width="100dip" 
          android:layout_height="wrap_content" 
          android:gravity="right"
          android:text="0.0"
          />
      </TableRow>

      <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView 
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
          android:gravity="left"
          android:text="@string/info_stations"
          />
        <TextView android:id="@+id/info_stations"
          android:layout_width="100dip" 
          android:layout_height="wrap_content" 
          android:gravity="right"
          android:text="0.0"
          />
      </TableRow>

      <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView 
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
          android:gravity="left"
          android:text="@string/info_length"
          />
        <TextView android:id="@+id/info_length"
          android:layout_width="100dip" 
          android:layout_height="wrap_content" 
          android:gravity="right"
          android:text="0.0"
          />
      </TableRow>

      <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView 
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
          android:gravity="left"
          android:text="@string/info_depth"
          />
        <TextView android:id="@+id/info_depth"
          android:layout_width="100dip" 
          android:layout_height="wrap_content" 
          android:gravity="right"
          android:text="0.0"
          />
      </TableRow>

      <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView 
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
          android:gravity="left"
          android:text="@string/info_volume"
          />
        <TextView android:id="@+id/info_volume"
          android:layout_width="100dip" 
          android:layout_height="wrap_content" 
          android:gravity="right"
          android:text="0.0"
          />
      </TableRow>

    </TableLayout>

    <TextView android:id="@+id/info_volume"
       android:layout_width="100dip" 
       android:layout_height="wrap_content" 
       android:layout_marginTop="15dp" 
       android:layout_marginBottom="8dp" 
       android:gravity="right"
       android:text="SURVEYS"
       android:textSize="20dp"
     />
    
    
    <ListView android:id="@+id/surveys_list"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:stackFromBottom="true"
          android:transcriptMode="alwaysScroll"
          android:layout_weight="1"
          android:textSize="14sp"
     />  

</LinearLayout>
